--- a/pandas-challenge/PycitySchools_starter_2.ipynb
+++ b/pandas-challenge/PycitySchools_starter_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,21 +142,31 @@
     "\n",
     "# File to Load (Remember to Change These)\n",
     "#relative path: PyCitySchools\\Resources\n",
-    "school_data_to_load = Path(\"PyCitySchools/Resources/schools_complete.csv\")\n",
-    "student_data_to_load = Path(\"PyCitySchools/Resources/students_complete.csv\")\n",
-    "\n",
+    "#school_data_to_load = Path(\"Resources/schools_complete.csv\")\n",
+    "#student_data_to_load = Path(\"Resources/students_complete.csv\")\n",
+    "school_data_to_load = Path(\"./Resources/schools_complete.csv\")\n",
+    "student_data_to_load = Path(\"./Resources/students_complete.csv\")\n",
     "# Read School and Student Data File and store into Pandas DataFrames\n",
     "school_data_df = pd.read_csv(school_data_to_load)\n",
     "student_data_df = pd.read_csv(student_data_to_load)\n",
     "\n",
     "# Combine the data into a single dataset.\n",
-    "school_data_complete_df = pd.merge(student_data, school_data, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
-    "school_data_complete.head()"
+    "school_data_complete_df = pd.merge(student_data_df, school_data_df, how=\"left\", on=[\"school_name\", \"school_name\"])\n",
+    "school_data_complete_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##District Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +175,7 @@
        "15"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +219,7 @@
        "24649428"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +243,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +266,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +288,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +311,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +334,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +406,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -458,20 +468,20 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use the code provided to select the type per school from school_data\n",
-    "school_types = school_data.set_index([\"school_name\"])[\"type\"]\n",
+    "school_types = school_data_df.set_index([\"school_name\"])[\"type\"]\n",
     "school_types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +608,7 @@
        "14     Wright High School           1800"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +781,7 @@
        "14     Wright High School           1800  1049400               583.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,41 +797,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School      81.033963\n",
+       "Cabrera High School     83.975780\n",
+       "Figueroa High School    81.158020\n",
+       "Ford High School        80.746258\n",
+       "Griffin High School     83.816757\n",
+       "Name: reading_score, dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the average test scores per school from school_data_complete\n",
-    "per_school_math = school_data_complete_df.groupby(\"school_name\")[[\"math_score\"]].mean().reset_index()\n",
+    "#per_school_math = school_data_complete_df[school_data_complete_df[\"school_name\",\"math_score\"]].mean()\n",
+    "#per_school_math = school_data_complete_df[(school_data_complete_df[\"math_score\"])].mean()[\"school_name\"] \n",
+    "per_school_math=school_data_complete_df.groupby('school_name')['math_score'].mean()                                       \n",
+    "                                           \n",
     "\n",
-    "per_school_reading = school_data_complete_df.groupby(\"school_name\")[[\"reading_score\"]].mean().reset_index()\n",
-    "\n"
+    "#per_school_reading = school_data_complete_df.groupby(\"school_name\")[[\"reading_score\"]].mean().reset_index()\n",
+    "per_school_reading=school_data_complete_df.groupby('school_name')['reading_score'].mean()\n",
+    "#per_school_math.head()\n",
+    "#per_school_reading.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Columns not found: False, True'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[94], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m students_passing_math \u001b[38;5;241m=\u001b[39mschool_data_complete_df[(school_data_complete_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmath_score\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m70\u001b[39m)]\u001b[38;5;241m.\u001b[39mcount()[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstudent_name\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#school_students_passing_math =school_data_complete_df.groupby(\"school_name\")[([\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m school_students_passing_math \u001b[38;5;241m=\u001b[39m school_data_complete_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mschool_name\u001b[39m\u001b[38;5;124m'\u001b[39m)[(school_data_complete_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmath_score\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m70\u001b[39m) \u001b[38;5;241m&\u001b[39m (school_data_complete_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreading_score\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m70\u001b[39m)]\u001b[38;5;241m.\u001b[39mcount()[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstudent_name\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\Owner\\.conda\\envs\\PythonData\\Lib\\site-packages\\pandas\\core\\groupby\\generic.py:1951\u001b[0m, in \u001b[0;36mDataFrameGroupBy.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1944\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(key) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1945\u001b[0m     \u001b[38;5;66;03m# if len == 1, then it becomes a SeriesGroupBy and this is actually\u001b[39;00m\n\u001b[0;32m   1946\u001b[0m     \u001b[38;5;66;03m# valid syntax, so don't raise\u001b[39;00m\n\u001b[0;32m   1947\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1948\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot subset columns with a tuple with more than one element. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1949\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUse a list instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1950\u001b[0m     )\n\u001b[1;32m-> 1951\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(key)\n",
-      "File \u001b[1;32mc:\\Users\\Owner\\.conda\\envs\\PythonData\\Lib\\site-packages\\pandas\\core\\base.py:239\u001b[0m, in \u001b[0;36mSelectionMixin.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    237\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mintersection(key)) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(key)):\n\u001b[0;32m    238\u001b[0m         bad_keys \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(key)\u001b[38;5;241m.\u001b[39mdifference(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39mcolumns))\n\u001b[1;32m--> 239\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumns not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(bad_keys)[\u001b[38;5;241m1\u001b[39m:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    240\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_gotitem(\u001b[38;5;28mlist\u001b[39m(key), ndim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m    242\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Columns not found: False, True'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>student_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bailey High School</td>\n",
+       "      <td>3318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cabrera High School</td>\n",
+       "      <td>1749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>1946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ford High School</td>\n",
+       "      <td>1871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Griffin High School</td>\n",
+       "      <td>1371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Hernandez High School</td>\n",
+       "      <td>3094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Holden High School</td>\n",
+       "      <td>395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>1916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Johnson High School</td>\n",
+       "      <td>3145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Pena High School</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Rodriguez High School</td>\n",
+       "      <td>2654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Shelton High School</td>\n",
+       "      <td>1653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>1525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Wilson High School</td>\n",
+       "      <td>2143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>1680</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              school_name  student_count\n",
+       "0      Bailey High School           3318\n",
+       "1     Cabrera High School           1749\n",
+       "2    Figueroa High School           1946\n",
+       "3        Ford High School           1871\n",
+       "4     Griffin High School           1371\n",
+       "5   Hernandez High School           3094\n",
+       "6      Holden High School            395\n",
+       "7       Huang High School           1916\n",
+       "8     Johnson High School           3145\n",
+       "9        Pena High School            910\n",
+       "10  Rodriguez High School           2654\n",
+       "11    Shelton High School           1653\n",
+       "12     Thomas High School           1525\n",
+       "13     Wilson High School           2143\n",
+       "14     Wright High School           1680"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the number of students per school with math scores of 70 or higher from school_data_complete\n",
-    "students_passing_math =school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
+    "students_passing_math = school_data_complete_df[school_data_complete_df['math_score'] >= 70]\n",
+    "per_school_passing_math = students_passing_math.groupby('school_name').size().reset_index(name='student_count')\n",
+    "#students_passing_math = school_data_complete_df[(school_data_complete_df('school_name')[\"math_score\"] >= 70)].count()[\"school_name\"]\n",
     "#school_students_passing_math =school_data_complete_df.groupby(\"school_name\")[([\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
-    "school_students_passing_math = school_data_complete_df.groupby('school_name')[(school_data_complete_df[\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]"
+    "#school_students_passing_math = school_data_complete_df.groupby('school_name')[(school_data_complete_df[\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
+    "per_school_passing_math\n"
    ]
   },
   {
